--- a/scss/prueba.scss
+++ b/scss/prueba.scss
@@ -1,58 +1,83 @@
-
+/*---------------LANDING PAGE------------------------*/
 /*---------------HEADER------------------------*/
+.Header{
+margin-bottom: 15px;
+}
 
-  .Header__logo{
 
-    margin-top: 10px; 
-    margin-left: 15px; 
-  }
-  
-  .Header__menuPrincipal{
-      color: #333333;
-      font-family:'Raleway', sans-serif;
-      font-weight: 300;
-      font-size: 100%;
-      display: flex;
-      flex-direction: row;
-      justify-content: flex-end;
-      float: right; 
-      margin-right: 15px; 
-      margin-top: 15px; 
-      width: 25%;
-      transition: color 1s;
-  }
+.Header__logo{
+  margin-top: 10px; 
+  margin-left: 15px; 
+}
 
-    
-    .Header__menuPrincipal--1  {
-      color: #333333;
-     
-     }
+.Header__menuPrincipal{
+    color: #333333;
+    font-family:'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content:space-between;
+    align-items:center;
+    float: right; 
+    width: 400px;
+    margin-right: 25px;
+
+}
 
   
-     .Header__menuPrincipal--2  {
-      color: #333333;
-  
-     }
-
-     .Header__menuPrincipal--3  {
-      color: #333333;
-  
-     }
-
-     .Header__menuPrincipal--4  {
-      color: #333333;
-  
-     }
+  .Header__menuPrincipal--1  {
+    color: #FCD4D2;
    
-     .Header__menuPrincipal--5  {
-      color: #333333;
-  
-     }
+   }
+
+   .Header__menuPrincipal--1:hover {
+    color: #999999;
+   }
+
+   .Header__menuPrincipal--2  {
+    color: #333333;
+  }
+  .Header__menuPrincipal--2:hover {
+    color: #999999;
    
-     .carrouselHome {
-      margin-left: 10px;
-      margin-right: 10px;
-     }
+   }
+   
+   .Header__menuPrincipal--3  {
+    color: #333333;
+
+   }
+
+   .Header__menuPrincipal--3:hover {
+    color: #999999;
+   
+   }
+
+   .Header__menuPrincipal--4  {
+    color: #333333;
+
+   }
+
+   .Header__menuPrincipal--4:hover {
+    color: #999999;
+   
+   }
+ 
+   .Header__menuPrincipal--5  {
+    color: #333333;
+
+   }
+
+   .Header__menuPrincipal--4:hover {
+    color: #999999;
+   
+   }
+ 
+   .carrouselHome {
+    margin-left: 10px;
+    margin-right: 10px;
+   }
+
 
 
 
@@ -78,18 +103,10 @@
 
 }
 
-
-
 .parrafo{
   margin: 0 50px 60px 40px ;
-
-
-  .parrafo__imagen{
-    grid-area: Imagen;  
-  }
-
 }
-  
+
 
 
   .parrafo__texto {
@@ -218,7 +235,6 @@
    
   }
  
-
 
 .imagenes--5{
   grid-area: Imagen5;
@@ -366,12 +382,12 @@ font-family:$font-family;
   grid-template-rows: 1fr 1fr;
   grid-template-columns: 50% 50%;
   grid-column-gap: 20px;
-  grid-row-gap: 50px;
+  grid-row-gap: 0px;
   grid-template-areas:
   "fUnoNosotros pUnoNosotros"
-  "pDosNosotros fDosNosotros";
-    margin: 60px 120px 0px 120px ;
-    }
+  "IDosNosotros fDosNosotros";
+  margin: 60px 120px 0px 120px ;
+  }
 
 
     .TextoNosotros__frase{
@@ -379,14 +395,15 @@ font-family:$font-family;
       font-family:'Raleway', sans-serif;
       font-size: 250%;
       font-weight:700;
-    
-        }
+      line-height: 45px;
+     }
 
 
     .TextoNosotros__frase--1{
       grid-area: fUnoNosotros;
       width: 90%;
       padding: 20px;
+      line-height: 45px;
      }
      
      .TextoNosotros__frase2{
@@ -409,10 +426,10 @@ font-family:$font-family;
   margin-top: 0px;
 }
   
-.TextoNosotros__parrafo--2{
-  grid-area: pDosNosotros;  
-  @extend .TextoNosotros__parrafo--1;
-  font-family:'Raleway', sans-serif;
+.ImgNosotros__imagen--2{
+  grid-area: IDosNosotros;  
+  margin-top: -30px;
+  border: solid 1px #FCD4D2;
 
 }
 
@@ -870,7 +887,7 @@ animation-delay: 0s;
   /*---------------SECCION CONTACTO------------------------*/
 
 
-.imgHeaderContacto{
+.HeaderContacto__imagen{
   margin: 15px 15px 15px 15px;
 
 }
@@ -888,141 +905,48 @@ animation-delay: 0s;
 }
 
 
-
-.formularioContacto{
-  color:  #000000;
+.form-check{
   font-family:'Raleway', sans-serif;
-  font-size: 100%;
-  font-weight:300;
-  width: 800px;
-  display: grid;
-  grid-template-rows: 50px 50px 50px 50px 50px 50px;
-  grid-template-columns: 10% 30% 10% 30%;
-  grid-column-gap: 45px;
-  grid-row-gap: 10px;
-  grid-template-areas:
-  "nom cnom ape cape"
-  "mail cmail cmail cmail"
-  "sex sexh sexm sexm"
-  "prov cprov nov cnov"
-  "msj cmsj cmsj cmsj";
-  margin: 0 30px 20px 280px ;
+  font-size: 15px;
+  color: #999999;
+ }
 
-
-}
-
-.nombre {
-grid-area: nom;
-}
-
-.cnombre {
-  grid-area: cnom;
-  }
-  
-
-.apellido {
-grid-area: ape;
-}
-
-.capellido {
-  grid-area: cape;
-  }
-
-.email {
-grid-area: mail;
-}
-
-.cemail {
-  grid-area: cmail;
-  }
-
-.sexo {
-grid-area: sex;
-}
-
-.sexoh {
-grid-area: sexh;
-}
-
-.sexom {
-grid-area: sexm;
-}
-
-.provincia {
-grid-area: prov;
-}
-
-.cprovincia {
-  grid-area: cprov;
-  }
-  
-.novedades {
-  grid-area: nov;
-  }
-
-.cnovedades {
-grid-area: cnov;
-}
-
-.mensaje {
-grid-area: msj;
-}
-
-.cmensaje {
-grid-area: cmsj;
-}
-
-
-.botones{
-  color:  #000000;
+ .btn{
   font-family:'Raleway', sans-serif;
-  font-size: 100%;
-  font-weight:300;
-  width: 300px;
-  display: grid;
-  grid-template-rows: 60px;
-  grid-template-columns: 50% 50%;
-  grid-column-gap: 5px;
-  grid-row-gap: 10px;
-  grid-template-areas:
- "borrar send";
- justify-items: center;
- margin-left: 280px;
- transform: translate(485px, -70px);
+  color: #697FB7;
 
 
-}
+ }
+
+ .btn:hover{
+  font-family:'Raleway', sans-serif;
+  font-weight: 700;
+  color: #697FB7;
 
 
-.limpiar {
-grid-area: borrar;
-}
-  
-.enviar {
-  grid-area: send;
-  }
+ }
 
-
-
-
-
-
-
-  
-
+ /*---------------MOBILE------------------------*/
 
 @media (min-width: 375px) and (max-width:768px){
 
+.Header__logo{
+  margin-left: 180px;
+  margin-bottom: 100px;
+}
 
-  a {
-    text-decoration: none;
-    background-color: transparent;
-    font-size: 80% ;
-  }
-  
+.Header__menuPrincipal{
+  margin-top: 20px;
+  margin-bottom: 10px;
+  justify-content:space-between;
+  align-items:center;
+  width: 90%;
+
+
+}
   
   .primeraCita{
-    font-size: 120%;
+    font-size: 110%;
     font-weight:700;
     line-height:80%;
     margin-top: 40px; 
@@ -1030,12 +954,13 @@ grid-area: borrar;
     display: flex; 
     flex-direction: column; 
     justify-content: left;
-    margin-left: 40px ;
+    margin-left: 30px ;
+    line-height: 22px;
   
   }
   
   .primeraCita span{
-    color:  #000000;
+    color: #000000;
     font-family:'Raleway', sans-serif;
     font-size: 100%;
     font-weight:300;
@@ -1046,7 +971,7 @@ grid-area: borrar;
   
   
   .Parrafo{
-    margin: 0 50px 0  50px ;
+    margin: 0 50px 0  20px ;
     display: flex;
     flex-direction: column;
     justify-content: start;
@@ -1056,8 +981,10 @@ grid-area: borrar;
     
     .parrafo__imagen{
       height: auto;
-      width: auto;
+      width: 400px;
       margin-bottom: 40px;
+
+      
    }
     
     
@@ -1067,6 +994,9 @@ grid-area: borrar;
       transition: color 1s;
       animation-duration: 3s;
       animation-name: aparecer;
+      font-size: 100%;
+      width: 400px;
+      margin-left: 10px;
     }
     
   
@@ -1075,11 +1005,37 @@ grid-area: borrar;
       flex-direction: column;
       justify-content: start;
       align-content: start;
-      margin: 0 50px 100px 50px ;
+      margin: 0 50px 10px 50px ;
       transition:  1s;
       animation-duration: 3s;
       animation-name: aparecer;
     }
+
+    .segundaCita{
+      font-size: 250%;  
+      margin:10px 30px 5px 30px;
+  
+
+    }
+
+    .container__contactoTitulo{
+      margin-left: 30px;
+      margin-right: 30px;
+      margin-top: 10px;
+
+
+    }
+
+    .form-group{
+      margin-left: 30px;
+      margin-right: 30px;
+    }
+
+    .btn{
+      margin-left: 30px;
+
+    }
+
     
     @mixin footer_mixin ($color, $font-size, $font-weight, $font-family)
     {color: $color;
@@ -1092,8 +1048,7 @@ grid-area: borrar;
     .footer__parrafo{
       @include footer_mixin(#666666, 110%, 700, "Cormorant Garamond");
       float: left;
-      margin-top: 100px;
-      margin-bottom: 50px;
+      margin-top: 50px;
       margin-left: 40px;
      
     
@@ -1101,18 +1056,207 @@ grid-area: borrar;
     
     .footer__redes{
       @include footer_mixin(#666666, 110%, 700, "Cormorant Garamond");
-      width: 15%;
-      float: right;
+      width: 50%;
+      float: left;
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
       justify-content:space-evenly;
-      margin-top: 100px;
-      margin-bottom: 50px;
+      margin-top: 5px;
+      margin-left: 30px;
+     
     
     }
+
+
+     /*---------------SECCION NOSOTROS MOBILE------------------------*/
+     
+     .HeaderNosotros__Imagen{
+      width: 95%;
+      margin-top: 10px;
+    }
+
+    .TextoNosotros{
+      display: grid;
+      grid-template-rows: 1fr;
+      grid-template-columns: 100%;
+      grid-template-areas:
+      "fUnoNosotros" 
+      "pUnoNosotros"
+      "IDosNosotros"
+      "fDosNosotros";
+      margin: 10px 20px 0px 20px ;
+      }
+
+      .TextoNosotros__frase--1 {
+        font-size: 85%;
+        margin-top: 5px;
+        margin-bottom: 10px;
+
+
+      }
+
+      .TextoNosotros__parrafo--1{
+        margin-top: 5px;
+        margin-bottom: 10px;
+        margin-left: 10px;
+
+
+      }
+
+      .ImgNosotros__imagen--2{
+        width: 90%;
+        margin-top: 10px;
+        border: solid 1px #FCD4D2;
+
+
+      }
+    
+
+       .TextoNosotros__frase--2{
+        font-size: 85%;
+        margin-top: 5px;
+        margin-bottom: 10px;
+        margin-left: 20px;
+
+      }
+
+
+     
+
+    
+    
   
+  
+  /*---------------SECCION PRODUCTOS MOBILE------------------------*/
+
+
+  .HeaderProductos__imagen{
+    width: 95%;
+    margin-top: 10px;
+  }
+
+  .HeaderProductos__cita{
+    font-size: 110%;
+    font-weight:700;
+    line-height:80%;
+    margin-top: 5px; 
+    margin-bottom: 50px; 
+    display: flex; 
+    flex-direction: column; 
+    justify-content: left;
+    margin-left: 30px ;
+    margin-bottom: 0px ;
+    line-height: 12px;
   
   
   }
-  
+
+  .ImagenesProductos{
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-content: start;
+    margin: 0 50px 10px 50px ;
+    transition:  1s;
+    animation-duration: 3s;
+    animation-name: aparecer;
+  }
+
+  .ImagenesProductos2{
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-content: start;
+    margin: 0 50px 10px 50px ;
+    transition:  1s;
+    animation-duration: 3s;
+    animation-name: aparecer;
+  }
+
+
+    /*---------------SECCION INSPIRACION MOBILE------------------------*/
+
+    .citaInspiracion{
+      font-size: 110%;
+      font-weight:700;
+      line-height:80%;
+      margin-top: 70px; 
+      margin-bottom: 10px; 
+      display: flex; 
+      justify-content: left;
+      margin-left: 30px ;
+      line-height: 22px;
+    }
+
+    .fraseUnoInspiracion{
+      margin-top: 10px;
+      margin-bottom: 20px;
+      margin-left: 50px;
+      font-size: 180%;
+
+    }
+
+    .contenidoInspiracion__bloque1--img1I{
+      width: 100%;
+      margin-top: 5px;
+      margin-left: 5px;
+
+    }
+
+    .contenidoInspiracion__bloque2--img2I{
+      width: 100%;
+      margin-top: 5px;
+      margin-left: 5px;
+
+    }
+    .fraseDosInspiracion{
+      margin-top: 50px;
+      margin-bottom: 50px;
+      margin-left: 70px;
+      font-size: 180%;
+
+    }
+
+    .contenidoInspiracion__bloque2--videoI{
+      width: 100%;
+      margin-top: 5px;
+      margin-left: 5px;
+      margin-bottom: 5px;
+
+    }
+
+    .contenidoInspiracion__bloque3--img3I{
+      width: 100%;
+      margin-top: 5px;
+      margin-left: 5px;
+    }
+
+    .contenidoInspiracion__bloque3--frase{
+      margin-top: 50px;
+      margin-bottom: 5px;
+      margin-left: 80px;
+      font-size: 180%;
+    }
+
+
+ /*---------------SECCION CONTACTO MOBILE------------------------*/
+
+ .HeaderContacto__imagen{
+  width: 95%;
+  margin-top: 10px;
+}
+
+.fraseUnoContacto{
+  margin-top:10px;
+  font-size: 200%;
+  margin-bottom: 5px;
+  margin-left: 60px;
+
+}
+
+.form-check{
+  margin-left: 30px;
+}
+
+}
